infra/k8s/comments-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments

    spec:
      containers:
        - name: comments
          image: amarnaththillai/comments:latest


---

apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  ports:
  - name: comments-service
    protocol: TCP
    port: 6001
    targetPort: 6001
