infra/k8s/posts-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts

    spec:
      containers:
        - name: posts
          image: amarnaththillai/posts:latest


---

apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts
  ports:
  - name: posts-service
    protocol: TCP
    port: 6002
    targetPort: 6002
