infra/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: comments.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: comments-service
            port: 
              number: 6001
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: posts-service
            port: 
              number: 6002
  - host: feeds.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: feeds-service
            port: 
              number: 6003
